<resources>
    <string name="app_name">Black Sea Quizz</string>
    <string name="label1">Welcome To The Black Sea Quizz</string>
    <string name="label2">Please answer the questions bellow</string>
    <string name="question1">1. The Black Sea is a body of water and marginal sea of the Atlantic Ocean between:</string>
    <string name="question1_a">Eastern Europe, the Caucasus, and Western Asia</string>
    <string name="question1_b">the Lesser Antilles and Virgin Islands</string>
    <string name="question1_c">the Greek and Anatolian peninsulas </string>
    <string name="question2">2. Why do they call it Black Sea?</string>
    <string name="question2_a">The Black Sea was called "inhospitable" before Greek colonization, because it was difficult to navigate</string>
    <string name="question2_b">It contains a cyanobacteria called Trichodesmium erythraeum, which turns the normally blue-green water a black-brown</string>
    <string name="question3">3. It is bordered by:</string>
    <string name="question3_a"> Romania and Bulgaria to the west</string>
    <string name="question3_b">Ukraine, Russia, and Georgia to the north and east;</string>
    <string name="question3_c">Turkey to the south</string>
    <string name="question3_d">Norway to the north and west</string>
    <string name="question4">4. Originating in Germany, Europe\'s second-longest river flows southeast, passing through or touching the border of Austria, Slovakia, Hungary, Croatia, Serbia, Romania, Bulgaria, Moldova and Ukraine before emptying into the Black Sea.</string>
    <string name="question5">5. The movement of water between the lower and upper layers of water in Black Sea is the least found anywhere in the world. That prevents penetration of oxygen to the deeper regions of the Black Sea, there is no oxygen below 200 meters. Can marine animals live in the anoxic zone of Black Sea - bellow 200m ? </string>
    <string name="question5_a">Yes</string>
    <string name="question5_b">No</string>
    <string name="question6">6. Another very interesting fact or perhaps rumor about the Black Sea is that the Mt. Ararat standing in the eastern Turkey along the coastline of the Black Sea is considered to be the landing point for:</string>
    <string name="question6_a">First Crusade</string>
    <string name="question6_b"> Noah’s Ark</string>
    <string name="question7">7. Name the strait that connects the Black Sea with the Sea of Marmara, and via the Dardanelles, the Aegean and Mediterranean Seas, and separates Europe from Asia.</string>
    <string name="question7_a">Bering Strait</string>
    <string name="question7_b">Strait of Gibraltar</string>
    <string name="question7_c">Bosphorus</string>
    <string name="bottom"> Water is Life. Save Water. Go Green.</string>
    <string name="checkanswers">Check your answers</string>
    <string name="clearanswers">Clear answers</string>
    <string name="river">"DANUBE"</string>
    <string name="correctanswer">"       Correct answer: "</string>
    <string name="nothingcorrect">You have not checked anything correct. Please try again.</string>
    <string name="noanswer">Start again please, since your previous answers were just cleared.</string>
    <string name="submit">Submit</string>
    <string name="yourscore">Your score is: </string>
    <string name="of9">" of 9."</string>
     <string name="vote">Thank you for answering these questions!  \n \nIf you like this quizz, please vote</string>
    <string name="typename">Type its name here</string>
</resources>
